// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/modal/demo/alert.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      customized buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      confirm
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      more than two buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/basic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <svg
      class="am-icon am-icon-up am-icon-md"
    >
      <use
        href="#up"
      />
    </svg>
    <span>
      basic
    </span>
    <svg
      class="am-icon am-icon-up am-icon-md"
    >
      <use
        href="#up"
      />
    </svg>
  </a>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      popup
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/modal/demo/operation.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      operation
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/prompt.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      defaultValue
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      secure-text
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      custom buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      login-password
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;
